# hstutorial

./: CGI.hs  DupSearch.hs  DupSearch2.hs  DupSearch3.hs  FileSearch.hs  FileSearch2.hs  FileSearch3.hs  FileSearch4.hs  Letme.hs  MD5.hs  MD5c.hs  mx.c  tutorial.cabal
sudoku/: Aplish.hs  Haskellish.hs
