name:                tutorial
version:             0.1.0.0
synopsis:            A tutorial 
description:         This is an example of simple cabal project

license:             PublicDomain
author:              Sherlock Holmes
maintainer:          r0ml@better-programmer.com
build-type:          Simple
cabal-version:       >=1.10

Source-Repository head
  Type: git
  Location: git://github.com/r0ml/tutorial.git

library
  exposed-modules: 
  build-depends:       base >=4.8 && <4.9
  default-language:    Haskell2010
  hs-source-dirs:      .
  ghc-options: -Wall

-- -----------------------------------------------

-- Test-Suite test
--   type: exitcode-stdio-1.0
--   main-is: TestAhoy.hs
--   Default-Language: Haskell2010
--   build-depends:      base, tutorial, QuickCheck, Cabal
--   ghc-options: -Wall
--   hs-source-dirs: test
-- -----------------------------------------------

Executable md5
  Default-Language: Haskell2010
  Build-Depends: base, bytestring
  hs-source-dirs: .
  ghc-options: -Wall
  main-is: MD5.hs

Executable md5c
  Default-Language: Haskell2010
  Build-Depends: base, bytestring
  hs-source-dirs: .
  ghc-options: -Wall
  main-is: MD5c.hs
  C-Sources: mx.c

Executable Network
  Default-Language: Haskell2010
  Build-Depends: base, tutorial, preface-r0ml
  hs-source-dirs: .
  ghc-options: -Wall
  main-is: Network.hs

Executable Aplish
  Default-Language: Haskell2010
  Build-Depends: base, tutorial, preface-r0ml
  hs-source-dirs: sudoku
  ghc-options: -Wall
  main-is: Aplish.hs

Executable Haskellish
  Default-Language: Haskell2010
  Build-Depends: base, tutorial, preface-r0ml
  hs-source-dirs: sudoku
  ghc-options: -Wall
  main-is: Haskellish.hs

Executable Letme
  Default-Language: Haskell2010
  Build-Depends: base, tutorial, preface-r0ml
  hs-source-dirs: .
  ghc-options: -Wall
  main-is: Letme.hs

Executable DupSearch
  Default-Language: Haskell2010
  Build-Depends: base, tutorial, preface-r0ml, async
  hs-source-dirs: .
  ghc-options: -Wall
  main-is: DupSearch.hs

Executable DupSearch2
  Default-Language: Haskell2010
  Build-Depends: base, tutorial, preface-r0ml, async
  hs-source-dirs: .
  ghc-options: -Wall -threaded -with-rtsopts=-N8
  main-is: DupSearch2.hs

Executable DupSearch3
  Default-Language: Haskell2010
  Build-Depends: base, tutorial, preface-r0ml
  hs-source-dirs: .
  ghc-options: -Wall -threaded -with-rtsopts=-N8
  main-is: DupSearch3.hs

Executable DupSearch4
  Default-Language: Haskell2010
  Build-Depends: base, tutorial, preface-r0ml
  hs-source-dirs: .
  ghc-options: -Wall -threaded
  main-is: DupSearch4.hs

Executable FileSearch
  Default-Language: Haskell2010
  Build-Depends: base, tutorial, preface-r0ml
  hs-source-dirs: .
  ghc-options: -Wall
  main-is: FileSearch.hs

Executable FileSearch2
  Default-Language: Haskell2010
  Build-Depends: base, tutorial, preface-r0ml, async
  hs-source-dirs: .
  ghc-options: -Wall
  main-is: FileSearch2.hs

Executable FileSearch3
  Default-Language: Haskell2010
  Build-Depends: base, tutorial, preface-r0ml, async
  hs-source-dirs: .
  ghc-options: -Wall
  main-is: FileSearch3.hs

Executable FileSearch4
  Default-Language: Haskell2010
  Build-Depends: base, tutorial, preface-r0ml, async
  hs-source-dirs: .
  ghc-options: -Wall
  main-is: FileSearch4.hs

Executable tutorial
  Default-Language: Haskell2010
  Build-Depends: base, tutorial, preface-r0ml
  hs-source-dirs: .
  ghc-options: -Wall
  main-is: MainTutorial.hs

